--- a/style.css
+++ b/style.css
@@ -8,21 +8,27 @@ body {
   .container {
     max-width: 600px;
     margin: 50px auto;
-    background: #fff;
+    background: #474973;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
+
+  #billForm {
+    background: #1c213a;
+    padding:60px;
+    border-radius: 20px;
+  }
+
   h1 {
     text-align: center;
-    color: #333;
+    color: #0d0c1d;
   }
   
   label {
     display: block;
     margin: 10px 0 5px;
-    color: #555;
+    color: #f1dac4;
   }
   
   input {
@@ -36,7 +42,7 @@ body {
   button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color:#007ea7;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -45,7 +51,7 @@ body {
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #00a8e8;
   }
   
   #output {
@@ -59,6 +65,6 @@ body {
     background: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 4px;
-    text-align: left;
+    text-align: center;
   }
   
