--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
   #result {
     margin: 15px 0;
     padding: 10px;
-    background: #f9f9f9;
+    background:#8d99ae;
     border: 1px solid #ddd;
     border-radius: 4px;
     text-align: center;
